--- a/LazzyBee/Settings/SpeedTableViewCell.xib
+++ b/LazzyBee/Settings/SpeedTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.34999999999999998" minValue="0.050000000000000003" maxValue="0.59999999999999998" id="wzx-1k-Pjd">
+                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.34999999999999998" minValue="0.10000000000000001" maxValue="0.59999999999999998" id="wzx-1k-Pjd">
                         <rect key="frame" x="39" y="7" width="242" height="31"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <connections>
@@ -33,7 +33,7 @@
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="speedSlider" destination="wzx-1k-Pjd" id="wR6-Ov-fnQ"/>
+                <outlet property="speedSlider" destination="wzx-1k-Pjd" id="5rZ-6e-WZQ"/>
             </connections>
             <point key="canvasLocation" x="268" y="310"/>
         </tableViewCell>
