--- a/LazzyBee/Mainsreen/SearchViewController.xib
+++ b/LazzyBee/Mainsreen/SearchViewController.xib
@@ -43,7 +43,7 @@
                             <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="no" returnKeyType="search"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="eSB-L2-RcT"/>
                             </connections>
