--- a/LazzyBee/Mainsreen/StudyWordViewController_iPad.xib
+++ b/LazzyBee/Mainsreen/StudyWordViewController_iPad.xib
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="adBanner" destination="4Cu-bQ-Qxe" id="iwt-vz-o1b"/>
                 <outlet property="btnAgain" destination="sRG-De-3AI" id="ILa-7n-gxM"/>
+                <outlet property="btnDictionary" destination="iqo-gT-nCj" id="Vht-I6-zKl"/>
                 <outlet property="btnEasy" destination="xPP-zK-Dug" id="T3w-ez-PRM"/>
                 <outlet property="btnHard" destination="MLm-18-boa" id="3dP-fJ-h2y"/>
                 <outlet property="btnNorm" destination="HDQ-rw-w8o" id="gvj-dm-alk"/>
@@ -30,30 +31,38 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" id="cp3-Og-rfU">
-                    <rect key="frame" x="0.0" y="0.0" width="768" height="30"/>
+                    <rect key="frame" x="0.0" y="0.0" width="768" height="38"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EnL-K1-HzE">
-                            <rect key="frame" x="8" y="6" width="90" height="21"/>
+                            <rect key="frame" x="8" y="8" width="100" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="0.0" green="0.3022726395" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Again: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ibe-iP-d7k">
-                            <rect key="frame" x="128" y="6" width="90" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Again: 4440" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ibe-iP-d7k">
+                            <rect key="frame" x="133" y="8" width="100" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="0.75808869950000002" green="0.0" blue="0.17734529260000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Review: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Nzw-Cp-VRt">
-                            <rect key="frame" x="248" y="6" width="90" height="21"/>
+                            <rect key="frame" x="258" y="8" width="100" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="iqo-gT-nCj">
+                            <rect key="frame" x="720" y="0.0" width="40" height="40"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" image="ic_dictionary.png"/>
+                            <connections>
+                                <action selector="btnDictionaryClick:" destination="-1" eventType="touchUpInside" id="c2S-93-EnR"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
@@ -63,7 +72,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <webView contentMode="scaleToFill" id="dTl-Xk-dXl">
-                    <rect key="frame" x="0.0" y="30" width="768" height="879"/>
+                    <rect key="frame" x="0.0" y="38" width="768" height="871"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -152,7 +161,7 @@ Again</string>
             <connections>
                 <outletCollection property="gestureRecognizers" destination="h3L-bu-8jo" appends="YES" id="LKB-5j-1zR"/>
             </connections>
-            <point key="canvasLocation" x="686" y="334"/>
+            <point key="canvasLocation" x="333" y="366"/>
         </view>
         <swipeGestureRecognizer direction="left" id="h3L-bu-8jo">
             <connections>
@@ -164,5 +173,6 @@ Again</string>
     <resources>
         <image name="button_long_ipad.png" width="667" height="40"/>
         <image name="button_square_ipad.png" width="170" height="50"/>
+        <image name="ic_dictionary.png" width="30" height="30"/>
     </resources>
 </document>
